up to suscribe section

--- a/index.html
+++ b/index.html
@@ -1,20 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>new-year-thems</title>
     <link rel="stylesheet" href="./style/style.css">
 </head>
-<body>
-    <header>
 
+<body class="merriweather-sans-normal">
+    <header>
+        <section class="banner">
+            <div class="parent-header">
+                <p class="banner-title">Happy New Year</p>
+                <h1 class="banner-heading">New Year Party Celebration</h1>
+            </div>
+        </section>
     </header>
     <main>
+        <section class="new-year-photo">
+            <h1 class="new-year-title">65% OFF</h1>
+            <h4 class="new-year-heading">OUR HOLIDAY DEALS ARE BETTER</h4>
+            <h3 class="new-year-description">ALL CATEGORIES</h3>
+            <img src="./images/New Year Photo.png" alt="new-year-photo">
+        </section>
+        <section class="victorr">
+            <div class="victorr-parent">
+                <h1 class="victorr-heading">Welcome to <br>midnight party</h1>
+                <p class="victorr-paragraph">
+                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    sodales risus ut pellentesque vel euismod.
+                </p>
+                <div class="victorr-btn">
+                    <button class="btn"><a href="#">Join Now</a></button>
+                </div>
+            </div>
+        </section>
+        <section class="new-park-hotel">
+            <div class="new-park-parent">
+                <div class="new-park-child">
+                    <p class="font"><span class="first-word">Place:</span>New Park Hotel</p>
+                    <p class="font"><span class="first-word">Date:</span>31 December Night 2023</p>
+                    <p class="font"><span class="first-word">time:</span>Evening 730 pm To 12.30 Am</p>
+                </div>
+                <div class="new-park">
+                    <button class="btn">Join Now</button>
+                </div>
+
+            </div>
+        </section>
+        <section class="new-best-offer">
+            <div class="new-first-description">
+                <h4 class="new-title">NEW BEST YEAR</h4>
+                <h4 class="new-title-2">Comming Soon</h4>
+                <p class="new-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                    malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div class="new-image">
+                <img class="new-img" src="./images/Ellipse 1.png" alt="Human">
+            </div>
+            <div class="new-second-description">
+                <h4 class="new-second-title">2024</h4>
+                <p class="new-second-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <img src="./images/Group 96.png" alt="Happy-new-year">
+            </div>
+        </section>
+        <section class="holiday">
+            <div class="holiday-title">
+                <p class="holiday-ti-1">WHAT IS FUNCTIONAL</p>
+                <h1 class="holiday-ti-2"><span class="holiday-color">Holidays</span> Sale 50%</h1>
+            </div>
+            <div class="holiday-paragraph">
+                <p class="holiday-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.
+                </p>
+            </div>
+            <div class="holiday-photo">
+                <div class="photo-1">
+                    <img class="first" src="./images/Group 75.png" alt="photo">
+                </div>
+                <div class="photo-2">
+                    <img class="second" src="./images/Group 44.png" alt="photo">
+                </div>
+            </div>
+        </section>
+        <section class="the-best-gift">
+            <h4 class="the-best-gift-title">THE BEST GIFTS</h4>
+            <h2 class="the-best-gif-title-2">Our Awesome Portfolio</h2>
+            <div class="the-best-paragraph">
+                <p class="the-best-gift-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            
+            <div class="the-best-gift-first">
+                <div class="the-best-gift-one">
+                    <img class="the-image" src="./images/Rectangle 3.png" alt="Bag">
+                </div>
+                <div class="the-best-gift-one">
+                    <img src="./images/Rectangle 4.png" alt="Bag" class="the-image">
+                </div>
+                <div class="the-best-gift-one">
+                    <img src="./images/Rectangle 5.png" alt="Hill" class="the-image">
+                </div>
+            </div>
+            <div class="the-best-gift-second">
+                <div class="the-best-gift-one">
+                    <img src="./images/Rectangle 6.png" alt="Hill" class="the-image">
+
+                </div>
+                <div class="the-best-gift-one">
+                    <img src="./images/Rectangle 7.png" alt="sun Class" class="the-image">
+
+                </div>
+                <div class="the-best-gift-one">
+                    <img src="./images/Rectangle 8.png" alt="Churi" class="the-image">
+                </div>
+            </div>
+
+        </section>
+        <section class="suscibe">
+            <div class="sus-img">
+                <img src="./images/Group 61.png" alt="mail" class="suscribe-img">
+            </div>
+            <h2 class="sub-header">
+                Subscribe Newsletter
+            </h2>
+            <div class="sus-paragraph">
+                <p class="sus-para">
+                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. 
+                </p>
+            </div>
+            <div class="search">
+                <input type="email" id="email" placeholder="user@gmail.com">
+            </div>
+            
+
+            </p>
+        </section>
 
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
