Done but footer have some issue

--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
                 <h1 class="holiday-ti-2"><span class="holiday-color">Holidays</span> Sale 50%</h1>
             </div>
             <div class="holiday-paragraph">
-                <p class="holiday-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
-                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.
+                <p class="holiday-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id
+                    fermentum amet amet sit consectetur.
                 </p>
             </div>
             <div class="holiday-photo">
@@ -88,9 +89,10 @@
             <h4 class="the-best-gift-title">THE BEST GIFTS</h4>
             <h2 class="the-best-gif-title-2">Our Awesome Portfolio</h2>
             <div class="the-best-paragraph">
-                <p class="the-best-gift-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <p class="the-best-gift-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             </div>
-            
+
             <div class="the-best-gift-first">
                 <div class="the-best-gift-one">
                     <img class="the-image" src="./images/Rectangle 3.png" alt="Bag">
@@ -126,20 +128,45 @@
             </h2>
             <div class="sus-paragraph">
                 <p class="sus-para">
-                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. 
+                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    sodales risus ut pellentesque vel euismod.
                 </p>
             </div>
             <div class="search">
                 <input type="email" id="email" placeholder="user@gmail.com">
+                <button id="input-button">Suscribe</button>
             </div>
-            
-
-            </p>
         </section>
-
     </main>
     <footer>
-
+        <div class="footer-title">
+            <div class="footer-first-div">
+                <p class="footer-paragraph">
+                    44, Big Building Roosevelt Street
+                </p>
+                <p class="footer-paragraph">
+                    Beach Gardens Florida 33410
+                </p>
+            </div>
+            <div class="footer-second-div">
+                <p class="footer-paragraph">
+                    +00 123 584 124
+                </p>
+                <p class="footer-paragraph">
+                    www.website.com
+                </p>
+            </div>
+        </div>
+        <div class="social-media">
+            <img class="socal-img" src="./icons/Facebook.png" alt="facebook">
+            <img class="socal-img" src="./icons/Instagram.png" alt="Instragram">
+            <img class="socal-img" src="./icons/Twitter.png" alt="Twitter">
+            <img class="socal-img" src="./icons/Linkedin.png" alt="Linkdin">
+        </div>
+        <div class="last">
+            <p>2017, All Rights Reserved.</p>
+            <p class="last-paragraph">Unsubscribe</p>
+        </div>
     </footer>
 </body>
 
